# ossp_labs

./: .clangd  .gitignore  big_data_generator.py  lab1.cpp  lab2.cpp  lab2_st.cpp  ossp.sln  ossp.vcxproj  ossp.vcxproj.filters
lab2/: Cargo.toml
lab2/bindings/: Cargo.toml
lab2/src/: main.rs
lab2_dotnet/: AsyncFileReader.cs  AsyncMultithreadFileReader.cs  FileReader.cs  Globals.cs  Program.cs
lab3/: Chat.sln
lab3/ChatClient/: ChatClient.cs  Program.cs
lab3/ChatServer/: Program.cs
lab4/: lab4.sln
lab4/Lab4/: PhilosophersGlobalMutex.cs  PhilosophersMutex.cs  PhilosophersSemaphore.cs  Program.cs
lab5/ChatClient/: ChatClient.cs  Command.cs
lab5/ChatLibrary/Entities/: MessageType.cs
lab5/ChatServer/: Program.cs
lab6/: RegistryHelper.cs
ossp/x64/Debug/: vc143.idb
ossp/x64/Debug/ossp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ossp.lastbuildstate
sem5/lab3/ChatClient/: CommandType.cs
sem5/lab3/ChatLibrary/: Globals.cs
sem5/lab3/ChatServer/: ChatServer.cs
sem5/lab5/ChatClient/: ChatClient.csproj  Program.cs
sem5/lab5/ChatLibrary/Entities/: Message.cs  (+1 more)
sem5/lab5/ChatServer/: ChatServer.cs
sem5/lab6/: Program.cs  TestKey.reg
sem6/: .clang-format
sem6/lab1/: main.bash
sem6/lab2/: main.sh
sem6/lab2/data/: test1.txt  test2.txt
sem6/lab3/: Makefile  main.c  myps  ps_utils.c  ps_utils.h
sem6/lab4/: Makefile  daemon.conf  main.c  mydaemon
sem6/lab5/: Makefile  lab5  main.c
sem6/lab6/: Makefile  chat_message.h  client  client.c  common.h  server  server.c
vs_labs/: vs_labs.sln
vs_labs/lab2/: lab2.cpp  lab2.vcxproj
(+15 files in other folders)
